    * Search through DBus
    * Small change to QuickAdd toolbar:
      * there is allowed whitespace after due: and others, i.e. "due: 2012-04-01" is parsed as a valid attribute
      * added start: which has the same meaning as defer:
    * Automatic restore a backup XML file if the original XML file could not be loaded
    * Backends were renamed to Synchronization Services, by Anant Gupta

2012-02-13 Getting Things GNOME! 0.2.9
    * Big refractorization of code, now using liblarch
    * Extended backend system to support multiple backends by Luca Invernizzi
    * Backend GUI configuration by Luca Invernizzi
    * Backends:
       * Added Mantis Bug Tracker backend, by Alayn Gortazar
       * Added Tomboy/Gnote backend, by Luca Invernizzi
       * Added Launchpad backend, by Luca Invernizzi
       * Added Twitter/Identica backend, by Luca Invernizzi
    * Graphical crah handler, thanks to Acire and python-snippets
    * Command line tool based on DBus interface of GTG, by Bryce Harrington
    * Added search feature, by João Ascenso
    * Rewritten notification area plugin with showing only 10 most doable tasks from Workview, by Izidor Matušov
    * Setting start/due date by a right click menu in the task browser, by Fabio Prina & Kevin Mehall
    * Right click behaviour in the task treeview is now consistant with other GNOME applications, by Jonathan Barnoud
    * Rework of deleting dialog
    * Previewing task content (gmail-like-ui), #384049, by Luca Invernizzi and Kevin Mehall
    * Attaching file to a task by drag-and-dropping it on the task or writing file:// URI
    * Added script for anonymizing task files; Marko Kevac
    * "Sexy" export template, created by Duncan Lock
    * DBus API is now CamelCase (be sure to update your personal scripts), by Lionel Dricot
    * Fuzzy date "Later" was renamed to "Someday"
    * Daily backup of gtg_tasks.xml
    * Save perferences, window positions and statuses immediately after a change