@@ -13,6 +13,7 @@
       * added start: which has the same meaning as defer:
     * Automatic restore a backup XML file if the original XML file could not be loaded
     * Backends were renamed to Synchronization Services, by Anant Gupta
+    * Added an option to import local (development) version of liblarch instead of system installed one
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
